내일은 resultMap으로 처리와 나머지 CRUD를 구현해보겠습니당. 이제 결제로 넘어가져

--- a/ToyProject/src/main/resources/templates/index.html
+++ b/ToyProject/src/main/resources/templates/index.html
@@ -10,6 +10,10 @@
 	<a href="hello">hello</a>
 	<h1>GELLO2</h1>
 	<p class="msg" th:text="${msg}"></p>
-	
+	<form action="/insert" method="POST">
+    <br>사람ID  : <input type = "text" name="id"></br>
+    <br>이름 name : <input type = "text" name="name"></br>
+    <input type="submit" value="정보 등록">
+    </form>
 </body>
 </html>
