toss에서 받은 billing key를 db에 넣고 조회하면서 사용하고 싶은 프로젝트 진행중

--- a/ToyProject/src/main/resources/templates/tossBilling/EnterSucces.html
+++ b/ToyProject/src/main/resources/templates/tossBilling/EnterSucces.html
@@ -9,6 +9,24 @@
     <div>
         <label>카드 정보: </label>
         <label th:text="${response}"/>
+        <input id="test" />
     </div>
+    <button onclick="ajaxTest()">SEND_INFO</button>
 </body>
+<script type="text/javascript">
+	function ajaxTest(){
+		$.ajax({
+	        url: "ajaxTest.do",
+	        type:"post",
+	        data: JSON.stringify(json),
+	        contentType: "application/json",
+	        success: function(data) {
+	            alert("통신성공");
+	        },
+	        error: function() {
+	            alert("error");
+	        }
+	    })
+	}
+</script>
 </html>
