--- a/ToyProject/src/main/resources/templates/tossBilling/TOSSindex.html
+++ b/ToyProject/src/main/resources/templates/tossBilling/TOSSindex.html
@@ -8,6 +8,15 @@
 <body>
 <button id="card_button">카드 등록</button>
 
+
+	<div>
+        <label>카드 번호: </label>
+        <label th:text="${card}"/>
+    </div>
+    <div>
+        <label>빌링키: </label>
+        <label th:text="${billing}"/>
+    </div>
 <script type="text/javascript" th:inline="javascript">
     window.addEventListener('load', (event) => {
         document.getElementById("card_button").addEventListener("click", function() {
@@ -19,7 +28,6 @@
                 failUrl: window.location.origin + "/tossBilling/Fail",
                 
             });
-            alert("여기서 읽는거 맞지?");
         });
     });
 </script>
