--- a/ToyProject/src/main/resources/templates/tossBilling/TOSSindex.html
+++ b/ToyProject/src/main/resources/templates/tossBilling/TOSSindex.html
@@ -23,7 +23,7 @@
             var clientKey = "test_ck_7DLJOpm5QrlnYRdJMxL3PNdxbWnY";
             var tossPayments = TossPayments(clientKey);
             tossPayments.requestBillingAuth("카드", {
-                customerKey: "UBUWgevKEJzBbxBm91B9j",
+                customerKey: "cdDX9vhYcZDc9ow_TiiSy",
                 successUrl: window.location.origin + "/tossBilling/EnterSucces",
                 failUrl: window.location.origin + "/tossBilling/Fail",
                 
