--- a/ToyProject/src/main/resources/templates/login.html
+++ b/ToyProject/src/main/resources/templates/login.html
@@ -1,36 +1,20 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
-<head>
-	<meta charset = "UTF-8">
-	<title>Title</title>
-</head>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+  <head>
+    <meta charset="UTF-8">
+    <title>login</title>
+  </head>
+  <body>
+    <h1>Login</h1> <hr>
+    <img src="/img/info.jpeg" />
 
-<body>
-	<div>자 이제 로그인을 만들자</div>
-	<form action="/login" method = "POST">
-		<input type = "text" id = "ID" name = "id">
-		<input type = "password" id = "PASS" name = "password">
-		<div>
-			<input type = "submit" value = "Login">
-		</div>
-		<div>
-			<button type="button" class="btn btn-primary" onClick="location.href='signUp'">회원 가입</button>
-		</div>
-		<div>
-			<button onclick="javascript:btn()"> 버튼 </button>
-		</div>
-	</form>
-</body>
-<script type="text/javascript">
-	
-	function btn(){
-		var id = document.getElementById('ID').value;
-		var pass = document.getElementById('PASS').value;
-		alert(id+'=='+pass);
-	}
+    <form action="/login" method="POST">
+      <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+      email : <input type="text" name="username"> <br>
+      password : <input type="password" name="password"> <br>
+      <button type="submit">Login</button>
+    </form> <br>
 
-</script>
-
+    <a href="/signup">Go to join! →</a>
+  </body>
 </html>
-
